# Screw_detection-Angle_Xbias_detection

./: README.md
predict_angle_xbias-example/: AngleWithXbias.cpp  AngleWithXbias.hpp  CMakeLists.txt
predict_screw-example/: CMakeLists.txt  ScrewDetection.cpp  ScrewDetection.h  Test.cpp
大批量测试代码/模块1/: get_acc.py  large_scale_test.cpp  r1.txt  result.txt
大批量测试代码/模块3/: cal_eval_for_orb.py  large_scale_test.cpp  new_clean.json
